v0.0.1/modules/schema/pages/class/WindTurbineType4aIEC.adoc
= `WindTurbineType4aIEC`
:toclevels: 4


+++Wind turbine IEC type 4A.
Reference: IEC 61400-27-1:2015, 5.5.5.2.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindTurbineType4aIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]
**** xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]
***** xref::class/WindTurbineType4IEC.adoc[`WindTurbineType4IEC`]
****** *`WindTurbineType4aIEC`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
WindTurbineType4aIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContPType4aIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindGenType4IEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindGenType3aIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContQPQULimIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContCurrLimIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindProtectionIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContQIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindRefFrameRotIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindContQLimIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerElectronicsConnection {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindPlantDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




WindTurbineType4aIEC -> WindContPType4aIEC: WindContPType4aIEC


WindTurbineType4aIEC -> WindGenType4IEC: WindGenType4IEC


WindTurbineType4aIEC -> WindGenType3aIEC: WindGenType3aIEC


WindTurbineType4aIEC -> WindContQPQULimIEC: WindContQPQULimIEC


WindTurbineType4aIEC -> WindContCurrLimIEC: WindContCurrLimIEC


WindTurbineType4aIEC -> WindProtectionIEC: WindProtectionIEC


WindTurbineType4aIEC -> WindContQIEC: WIndContQIEC


WindTurbineType4aIEC -> WindRefFrameRotIEC: WindRefFrameRotIEC


WindTurbineType4aIEC -> WindContQLimIEC: WindContQLimIEC


WindTurbineType4aIEC -> PowerElectronicsConnection: PowerElectronicsConnection


WindTurbineType4aIEC -> RemoteInputSignal: RemoteInputSignal


WindTurbineType4aIEC -> WindPlantDynamics: WindPlantDynamics


WindTurbineType4aIEC -> DiagramObject: DiagramObjects


WindTurbineType4aIEC -> InstanceSet: InstanceSet


WindTurbineType4aIEC -> Name: Names


WindTurbineType4aIEC -> ChangeSetMember: PropertiesCIMDataObject


WindTurbineType4aIEC -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<WindContPType4aIEC,`WindContPType4aIEC`>>
| 1
| xref::class/WindContPType4aIEC.adoc[`WindContPType4aIEC`]
| +++Wind control P type 4A model associated with this wind turbine type 4A model.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<PowerElectronicsConnection,`PowerElectronicsConnection`>>
| 1
| xref::class/PowerElectronicsConnection.adoc[`PowerElectronicsConnection`]
| +++The power electronics connection associated with this wind turbine type 3 or type 4 dynamics model.+++

| <<WIndContQIEC,`WIndContQIEC`>>
| 1
| xref::class/WindContQIEC.adoc[`WindContQIEC`]
| +++Wind control Q model associated with this wind turbine type 3 or type 4 model.+++

| <<WindContCurrLimIEC,`WindContCurrLimIEC`>>
| 1
| xref::class/WindContCurrLimIEC.adoc[`WindContCurrLimIEC`]
| +++Wind control current limitation model associated with this wind turbine type 3 or type 4 model.+++

| <<WindProtectionIEC,`WindProtectionIEC`>>
| 1
| xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]
| +++Wind turbune protection model associated with this wind generator type 3 or type 4 model.+++

| <<WindRefFrameRotIEC,`WindRefFrameRotIEC`>>
| 1
| xref::class/WindRefFrameRotIEC.adoc[`WindRefFrameRotIEC`]
| +++Reference frame rotation model associated with this wind turbine type 3 or type 4 model.+++

| <<WindGenType4IEC,`WindGenType4IEC`>>
| 0..1
| xref::class/WindGenType4IEC.adoc[`WindGenType4IEC`]
| +++Wind generator type 4 model associated with this wind turbine type 4A model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by these wind turbine type 3 or type 4 models.+++

| <<WindContQLimIEC,`WindContQLimIEC`>>
| 0..1
| xref::class/WindContQLimIEC.adoc[`WindContQLimIEC`]
| +++Constant Q limitation model associated with this wind generator type 3 or type 4 model.+++

| <<WindContQPQULimIEC,`WindContQPQULimIEC`>>
| 0..1
| xref::class/WindContQPQULimIEC.adoc[`WindContQPQULimIEC`]
| +++QP and QU limitation model associated with this wind generator type 3 or type 4 model.+++

| <<WindGenType3aIEC,`WindGenType3aIEC`>>
| 0..1
| xref::class/WindGenType3aIEC.adoc[`WindGenType3aIEC`]
| +++Wind generator type 3A model associated with this wind turbine type 4 model.+++

| <<WindPlantDynamics,`WindPlantDynamics`>>
| 0..1
| xref::class/WindPlantDynamics.adoc[`WindPlantDynamics`]
| +++The wind plant with which the wind turbines type 3 or type 4 are associated.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PowerElectronicsConnection]
=== `PowerElectronicsConnection`
+++The power electronics connection associated with this wind turbine type 3 or type 4 dynamics model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4Dynamics.PowerElectronicsConnection`
| Cardinality
| 1
| Type
| xref::class/PowerElectronicsConnection.adoc[`PowerElectronicsConnection`]

| Inherited from
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by these wind turbine type 3 or type 4 models.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4Dynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WindContCurrLimIEC]
=== `WindContCurrLimIEC`
+++Wind control current limitation model associated with this wind turbine type 3 or type 4 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindContCurrLimIEC`
| Cardinality
| 1
| Type
| xref::class/WindContCurrLimIEC.adoc[`WindContCurrLimIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

//[discrete]
[#WindContPType4aIEC]
=== `WindContPType4aIEC`
+++Wind control P type 4A model associated with this wind turbine type 4A model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType4aIEC.WindContPType4aIEC`
| Cardinality
| 1
| Type
| xref::class/WindContPType4aIEC.adoc[`WindContPType4aIEC`]


|===

//[discrete]
[#WIndContQIEC]
=== `WIndContQIEC`
+++Wind control Q model associated with this wind turbine type 3 or type 4 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WIndContQIEC`
| Cardinality
| 1
| Type
| xref::class/WindContQIEC.adoc[`WindContQIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

//[discrete]
[#WindContQLimIEC]
=== `WindContQLimIEC`
+++Constant Q limitation model associated with this wind generator type 3 or type 4 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindContQLimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContQLimIEC.adoc[`WindContQLimIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

//[discrete]
[#WindContQPQULimIEC]
=== `WindContQPQULimIEC`
+++QP and QU limitation model associated with this wind generator type 3 or type 4 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindContQPQULimIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindContQPQULimIEC.adoc[`WindContQPQULimIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

//[discrete]
[#WindGenType3aIEC]
=== `WindGenType3aIEC`
+++Wind generator type 3A model associated with this wind turbine type 4 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType4IEC.WindGenType3aIEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenType3aIEC.adoc[`WindGenType3aIEC`]

| Inherited from
| xref::class/WindTurbineType4IEC.adoc[`WindTurbineType4IEC`]


|===

//[discrete]
[#WindGenType4IEC]
=== `WindGenType4IEC`
+++Wind generator type 4 model associated with this wind turbine type 4A model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType4aIEC.WindGenType4IEC`
| Cardinality
| 0..1
| Type
| xref::class/WindGenType4IEC.adoc[`WindGenType4IEC`]


|===

//[discrete]
[#WindPlantDynamics]
=== `WindPlantDynamics`
+++The wind plant with which the wind turbines type 3 or type 4 are associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4Dynamics.WindPlantDynamics`
| Cardinality
| 0..1
| Type
| xref::class/WindPlantDynamics.adoc[`WindPlantDynamics`]

| Inherited from
| xref::class/WindTurbineType3or4Dynamics.adoc[`WindTurbineType3or4Dynamics`]


|===

//[discrete]
[#WindProtectionIEC]
=== `WindProtectionIEC`
+++Wind turbune protection model associated with this wind generator type 3 or type 4 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindProtectionIEC`
| Cardinality
| 1
| Type
| xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===

//[discrete]
[#WindRefFrameRotIEC]
=== `WindRefFrameRotIEC`
+++Reference frame rotation model associated with this wind turbine type 3 or type 4 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType3or4IEC.WindRefFrameRotIEC`
| Cardinality
| 1
| Type
| xref::class/WindRefFrameRotIEC.adoc[`WindRefFrameRotIEC`]

| Inherited from
| xref::class/WindTurbineType3or4IEC.adoc[`WindTurbineType3or4IEC`]


|===


